# web-skeleton-rs

./: Cargo.toml  README.md  cspell.config.yaml  rustfmt.toml  web-skeleton-rs.yaml
src/: app.rs  common.rs  core.rs  lib.rs  main.rs  modules.rs  repositories.rs
src/common/configuration/: app.rs
src/core/: app_args.rs  app_errors.rs  app_handler.rs  app_state.rs  configuration.rs
src/core/middlewares/: auth.rs
src/modules/auth/: auth_0_router.rs  auth_1_models.rs  auth_2_handlers.rs  auth_3_services.rs  mod.rs
src/modules/todo/: mod.rs  todo_0_router.rs  todo_1_models.rs  todo_2_handlers.rs
src/modules/todos/: todo_0_router.rs  todo_1_models.rs  todo_2_handlers.rs
src/repositories/: surreal.rs
src/repositories/surreal/: surreal_context.rs  todo_repository.rs
src/repositories/surreal/models/: mod.rs  todo_entity.rs
